--- a/src/output.css
+++ b/src/output.css
@@ -636,6 +636,10 @@ video {
   z-index: 30;
 }
 
+.z-40 {
+  z-index: 40;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -651,6 +655,10 @@ video {
 
 .flex {
   display: flex;
+}
+
+.table {
+  display: table;
 }
 
 .hidden {
@@ -675,6 +683,10 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.max-h-\[60\%\] {
+  max-height: 60%;
 }
 
 .w-10 {
@@ -707,6 +719,16 @@ video {
 
 .max-w-\[90\%\] {
   max-width: 90%;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .flex-row {
@@ -828,6 +850,10 @@ video {
   padding-bottom: 0.25rem;
 }
 
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -869,19 +895,14 @@ video {
   color: rgb(243 119 142 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\#FFEBF6\] {
-  --tw-text-opacity: 1;
-  color: rgb(255 235 246 / var(--tw-text-opacity));
-}
-
 .text-\[\#FFA6D7\] {
   --tw-text-opacity: 1;
   color: rgb(255 166 215 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
